manifests/network/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docky
  labels:
    app.kubernetes.io/name: docky
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "3g"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  ingressClassName: nginx
  rules:
    - host: docky.co.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
    - host: www.docky.co.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
